# Martian-Gatherer

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: run-unit-test-and-upload-codecov.yml
map/: my_map.yaml
results/: clang_tidy.txt  cpplint.txt
src/: animated_box.cpp  nav2goal.cpp  random_object.cpp
src/mars_interfaces/: CMakeLists.txt  package.xml
src/martian_gatherer/: CMakeLists.txt  README.md  package.xml
src/martian_gatherer/UML/Revised/: activity diagram
src/martian_gatherer/include/: animated_box.hpp  nav2goal.hpp  spawn_box.hpp
src/martian_gatherer/launch/: robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  world.launch.py
src/martian_gatherer/map/: my_map.pgm
src/martian_gatherer/models/simple_box/: model.config  model.sdf
src/martian_gatherer/models/turtlebot3_waffle/: model.sdf
src/martian_gatherer/src/: animated_box.cpp  nav2goal.cpp  spawn_box.cpp
src/martian_gatherer/worlds/: my_world_2.world
test/: random_test.cpp
urdf/: turtlebot3_waffle.urdf
