<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>martian_gatherer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="prathinav.kv@gmail.com">pratkv</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>mars_interfaces</build_depend>
  <exec_depend>mars_interfaces</exec_depend>


  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/../../lib/martian_gatherer"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
